src/app/drone/components/drone.component.scss
.main-container{
    width:100%;
    height:90%;
    display: flexbox;
    align-items: center;
    justify-content: center;
}
button{
    background-color: white;
    font-weight: lighter;
    border: white;
}
button.active{
    font-weight: bold;
}
.note-button-container {
    margin: auto;
    width:80%;
    height:80%;
}
.note-button {
    display: inline-block;
    width: 33.33%;
    width: calc(100% / 3);
    line-height:25%;
    height: calc(100% / 4);
    font-size: 2.5rem;
}
.octave-button-container {
    width:100%;
    height:20%;
    
}
.octave-button {
    width: 33.33%;
    width: calc(100% / 2);
    line-height:25%;
    height: calc(100%);
    font-size: 2rem;
}

